# rabot

./: README.md  pyproject.toml
src/: rabot.py  utils.py
src/gr_datetime/: gr_date.py
src/pronunciation/: forvo.py
src/rabot/: exceptions.py  log.py  main.py  utils.py
src/rabot/cogs/faqs/: faqs.py
src/rabot/cogs/fun/: coptic.py
src/rabot/cogs/fun/gr_datetime/: gr_date.py
src/rabot/cogs/gr_datetime/: gr_date.py
src/rabot/cogs/pronunciation/: forvo.py  pronunciation.py
src/rabot/cogs/wiktionary/: embed_message.py  wiktionary.py
src/rabot/cogs/wordref/: entry.py  longest.py  wordref.py
src/rabot/gr_datetime/: gr_date.py
src/rabot/pronunciation/: forvo.py  pronunciation.py
src/rabot/wiktionary/: embed_message.py  wiktionary.py
src/rabot/wordref/: entry.py  longest.py  wordref.py
src/wiktionary/: embed_message.py  wiktionary.py
src/wordref/: entry.py  longest.py  wordref.py
tests/: test_date.py  test_longest.py  test_pronunciation.py  test_wiktionary.py  test_wordref.py
