[project]
name = "rabot"
version = "1.0.0"
dependencies = [
    "python-dotenv",
    "discord",
    "beautifulsoup4",
    "requests",
    "loguru",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest_asyncio",
    "ruff",
]

[project.urls]
"Repository" = "https://github.com/daxida/rabot"

[project.scripts]
rabot = "rabot.main:main"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 110
output-format = "concise"

[tool.ruff.lint]
preview = true
select = [
    "E",    # pycodestyle error
    "W",    # pycodestyle warning
    "I",    # isort
    "N",    # pep8-naming
    "F",    # Pyflakes rules
]
